# hyprlock

./: .clang-tidy  .gdb_history  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  hyprlandd.conf  hyprlock.conf  result  ydotool_loop.sh
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: nix-build.yml  nix-ci.yml  nix-test.yml  nix.yml
assets/: example.conf
nix/: default.nix  hm-module.nix  overlays.nix  test-meta.nix  tester.nix
nix/tests/: default.nix
pam/: hyprlock
protocols/: wlr-screencopy-unstable-v1.xml
setpwhash/: main.cpp
src/: defines.hpp  main.cpp
src/auth/: Auth.cpp  Auth.hpp  Fingerprint.cpp  Fingerprint.hpp  GreetdLogin.cpp  GreetdLogin.hpp  GreetdProto.hpp  Pam.cpp  Pam.hpp  SodiumPWHash.cpp  SodiumPWHash.hpp
src/config/: ConfigDataValues.hpp  ConfigManager.cpp  ConfigManager.hpp  LoginSessionManager.cpp  LoginSessionManager.hpp
src/core/: AnimationManager.cpp  AnimationManager.hpp  Auth.cpp  Auth.hpp  CursorShape.cpp  CursorShape.hpp  DBusManager.cpp  DBusManager.hpp  Egl.cpp  Egl.hpp  Fingerprint.cpp  Fingerprint.hpp  IAuth.hpp  LockSurface.cpp  LockSurface.hpp  Output.cpp  Output.hpp  Password.cpp  Password.hpp  PwAuth.cpp  PwAuth.hpp  Seat.cpp  Seat.hpp  Timer.cpp  Timer.hpp  hyprlock.cpp  hyprlock.hpp
src/helpers/: AnimatedVariable.hpp  Bmp.cpp  Bmp.hpp  Box.cpp  Box.hpp  Color.cpp  Color.hpp  Hyprpaper.cpp  Hyprpaper.hpp  Jpeg.cpp  Jpeg.hpp  Log.hpp  Math.hpp  MiscFunctions.cpp  MiscFunctions.hpp  NotJson.hpp  VarList.cpp  VarList.hpp  Vector2D.cpp  Vector2D.hpp  Webp.cpp  Webp.hpp
src/renderer/: AsyncResourceGatherer.cpp  AsyncResourceGatherer.hpp  AsyncResourceManager.cpp  AsyncResourceManager.hpp  DMAFrame.cpp  DMAFrame.hpp  Framebuffer.cpp  Framebuffer.hpp  Renderer.cpp  Renderer.hpp  Screencopy.cpp  Screencopy.hpp  Shader.hpp  Shaders.hpp  Shared.hpp  TextCmdResource.cpp  Texture.cpp  Texture.hpp  VideoBackend.cpp  VideoBackend.hpp  mtx.hpp
src/renderer/resources/: TextCmdResource.cpp  TextCmdResource.hpp
src/renderer/widgets/: Background.cpp  Background.hpp  IWidget.cpp  IWidget.hpp  Image.cpp  Image.hpp  Label.cpp  Label.hpp  PasswordInputField.cpp  PasswordInputField.hpp  ProgressBar.cpp  ProgressBar.hpp  Scale.cpp  Scale.hpp  SessionPicker.cpp  SessionPicker.hpp  ShaderBackground.cpp  ShaderBackground.hpp  Shadowable.cpp  Shadowable.hpp  Shape.cpp  Shape.hpp
src/renderer/widgets/icons/: eye-closed.hpp  eye-open.hpp
tests/: CMakeLists.txt  hyprland.conf  hyprland_test.conf  notjson.cpp  shared.hpp  waitForLock.cpp
tests/configs/: example.conf  images.conf  layout_and_shape.conf  lots_of_label_updates.conf  test1.conf
tests/src/: Log.hpp  harness.cpp  harness.hpp  main.cpp  shared.hpp
